<resources>
    <string name="data_input">Data Input</string>
    <string name="initial_velocity">Initial Velocity</string>
    <string name="final_velocity">Final Velocity</string>
    <string name="acceleration">Acceleration</string>
    <string name="time">Time</string>
    <string name="displacement">Displacement</string>
    <string name="solve">Solve</string>
    <string name="clear">Clear</string>
    <string name="instructions">Instructions</string>
    <string name="results">Results</string>
    <string name="menu_about">About</string>
    <string name="about">About</string>
    <string name="menu_instructions">Instructions</string>
    <string name="menu_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="instruct">Instruct</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome</string>
    <string name="help_button">Tells the user how to use the data input page</string>
    <string name="welcome_text">Press Get Started to start calculating physics equations,
        or press the instructions button to learn how to use the app.\n\n You can always access
        the instructions later in the app from the app bar on the top right.</string>
    <string-array name="spinner1">
               
        <item>Mercury</item>
               
        <item>Venus</item>
               
        <item>Earth</item>
               
        <item>Mars</item>
               
        <item>Jupiter</item>
               
        <item>Saturn</item>
               
        <item>Uranus</item>
               
        <item>Neptune</item>
           
    </string-array>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>